--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/hawi19952/async-sleep#readme",
   "dependencies": {
+    "@types/jest": "^29.5.0",
     "jest": "^29.5.0"
   }
 }
