--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "dev": "tsc --watch"
+    "dev": "tsc --watch",
+    "start": "node ./dist/src/index.js"
   },
   "devDependencies": {
+    "@types/amqplib": "^0.10.1",
     "@types/jest": "^29.5.0",
     "jest": "^29.5.0",
     "ts-jest": "^29.1.0",
     "typescript": "^5.0.4"
+  },
+  "dependencies": {
+    "amqplib": "^0.10.3"
   }
 }
