--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "@pulumi/aws": "^5.35.0",
+    "@pulumi/command": "^0.7.2",
+    "@pulumi/pulumi": "^3.63.0",
     "amqplib": "^0.10.3"
   }
 }
