--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "types": "./dist/index.d.ts",
+  "type": "module",
   "scripts": {
     "build": "tsc",
     "dev": "tsc --watch",
-    "start": "node --inspect --loader ./loader.js --enable-source-maps dist/server.js"
+    "start": "node --inspect --loader ./loader.js --enable-source-maps dist/index.js"
   },
   "devDependencies": {
     "@types/amqplib": "^0.10.1",
